--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^3.0.1",
+    "reactstrap": "^8.0.0",
+    "tachyons-border-radius": "^5.1.3",
+    "tachyons-display": "^5.0.5",
+    "tachyons-heights": "^6.1.4",
+    "tachyons-hovers": "^2.5.2",
+    "tachyons-links": "^3.0.11",
+    "tachyons-skins": "^4.1.1",
+    "tachyons-spacing": "^6.0.5",
+    "tachyons-text-align": "^3.1.0",
+    "tachyons-type-scale": "^6.1.1",
+    "tachyons-widths": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
